--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,5 @@
 name: Test
-on: [pull_request, workflow_run]
+on: [pull_request, workflow_dispatch]
 jobs:
   run_tests:
     runs-on: ubuntu-latest
